--- a/20190211/main.ipynb
+++ b/20190211/main.ipynb
@@ -5,7 +5,35 @@
    "metadata": {},
    "source": [
     "# 第2回 機械学習勉強会\n",
+    "## 先に今回のオチ\n",
+    "- 結局、tensorflowわからん、で行き詰まりました。(コードを読むのに莫大な時間がかかる・・・)\n",
+    "  - ほぼ英語で書かれていて、読んでもよくわからないので動かそうとして詰まった\n",
+    "- いまの旬は転移学習ということがわかった\n",
+    "\n",
+    "### 転移学習\n",
+    "- 特定のドメインで学習させた事象を別のドメインの学習の下敷きとして効率よく学習させる\n",
+    "- 例えば、Inception-V3は画像(オブジェクト)を1000クラスに分類するが、それを下敷きに犬猫を判定させる、とか\n",
+    "- 似ているドメインであれば殆どの部分を流用できることがわかっているらしい\n",
+    "- 参考: [転移学習：機械学習の次のフロンティアへの招待](https://qiita.com/icoxfog417/items/48cbf087dd22f1f8c6f4)\n",
+    "\n",
+    "### 前回見たモデルはなんだったのか\n",
+    "- [orriaga](https://github.com/oarriaga/face_classification) は以下から学習されている\n",
+    "  -  顔画像(感情）のデータセット [fer2013](https://www.kaggle.com/c/challenges-in-representation-learning-facial-expression-recognition-challenge/data)\n",
+    "  - 顔画像（性別)のデータセット [IMDB Gender Dataset](https://data.vision.ee.ethz.ch/cvl/rrothe/imdb-wiki/)\n",
+    "- もしかすると、日本人画像を使って転移学習すると精度あがるかも。\n",
+    "\n",
+    "### 次回予告\n",
+    "- 転移学習、いくつかやってみます\n",
+    "- tensorflowが本当に何者なのか、少し調べてみます。\n",
+    "\n",
     "## 学習済みモデルの話\n",
+    "### 学習済みモデル\n",
+    "- [tensorflow](https://github.com/tensorflow/models/)\n",
+    "- [Model Zoo](https://github.com/BVLC/caffe/wiki/Model-Zoo)\n",
+    "- [Caffe](http://docs.chainer.org/en/stable/reference/caffe.html)\n",
+    "- [MXNet](https://github.com/dmlc/mxnet-model-gallery)\n",
+    "- [Keras](https://keras.io/getting-started/faq/#how-can-i-use-pre-trained-models-in-keras)\n",
+    "\n",
     "### 学習済みモデルをまとめているところ\n",
     "- [tfhub](https://tfhub.dev/)\n",
     "  Googleのやつ。\n",
