--- a/20190307_SQL/SQL.ipynb
+++ b/20190307_SQL/SQL.ipynb
@@ -75,13 +75,13 @@
     "### 利用するデータベースを選択する\n",
     "\n",
     "```SQL\n",
-    "use sample\n",
+    "USE sample\n",
     "```\n",
     "\n",
     "### アクセス可能なテーブル一覧を参照する\n",
     "\n",
     "```SQL\n",
-    "show tables;\n",
+    "SHOW tables;\n",
     "```\n",
     "\n",
     "```bash\n",
