--- a/20190303_ML03/index.ipynb
+++ b/20190303_ML03/index.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 入力層: データセットの読み込み\n",
+    "## データセットの読み込み\n",
     "- mnistでダウンロードしたTraining用のラベル、画像、Test用のラベル、画像を読み込ませる\n",
     "- なお、ラベルは通常の数値ではなく、1-hot表現で取り込んでいる。\n",
     "- 1-hot表現は例えば7が正解なら[0,0,0,0,0,0,0,1,0,0]のように正解のところに1が立っていて、それ以外は0となるような表現のことを言う"
@@ -295,10 +295,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 第２層(出力層)\n",
-    "### softmax関数\n",
-    "- softmax関数は出力層で利用され、その出力値の合計は1になります。\n",
-    "- つまり、出力結果を確立値に変換するために利用されます。"
+    "## 出力値の確立値化 : softmax関数\n",
+    "- softmax関数は出力層で利用され、その出力値の合計は1になります。"
    ]
   },
   {
@@ -324,7 +322,7 @@
     "        y = np.exp(x) / np.sum(np.exp(x), axis=0)\n",
     "        return y.T \n",
     "\n",
-    "    x = x - np.max(x) # オーバーフロー対策\n",
+    "    x = x - np.max(x)\n",
     "    return np.exp(x) / np.sum(np.exp(x))\n",
     "\n",
     "x = np.arange(-5.0, 5.0, 0.1)\n",
@@ -336,8 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 第N層\n",
-    "### 活性化関数: シグモイド\n",
+    "## 活性化関数: シグモイド\n",
     "\n",
     "- シグモイド関数は以下に通りある値を境にゆるやかに出力を変化させる非線形関数である。\n",
     "- 最初の図のh(x)として利用され、ある一定の値を超えたら値を出力するように、とある特徴量がある閾値を超えたら大きな値が出力されるようになる。"
@@ -376,8 +373,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 重みの獲得\n",
-    "#### 損失関数\n",
+    "## 重みの獲得\n",
+    "### 結果の\"悪さ\"を数値化: 損失関数\n",
     "- 上の絵で書いた出力値と正解ラベルの評価では損失関数を用いる。\n",
     "- 損失関数は色々な種類がありえるが、ここでは交差エントロピー関数を用いる。\n",
     "- 損失関数に交差エントロピー関数を用いると、その値は-t(正解ラベル) * log(y(出力値))となる。\n",
@@ -410,7 +407,7 @@
     "        t = t.reshape(1, t.size)\n",
     "        y = y.reshape(1, y.size)\n",
     "        \n",
-    "    # 教師データがone-hot-vectorの場合、正解ラベルのインデックスに変換\n",
+    "    # 教師データがone-hot表現の場合、正解ラベルのインデックスに変換\n",
     "    if t.size == y.size:\n",
     "        t = t.argmax(axis=1)\n",
     "             \n",
@@ -428,9 +425,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 勾配の計算\n",
+    "### パラメータの修正料を決定: 勾配の計算\n",
     "- 勾配はある地点の傾斜を表す。\n",
-    "- つまり、交差エントロピー関数のある地点の勾配を計算することで、より交差エントロピー関数の出力が小さい = 正解に近い出力を探索できます。"
+    "- つまり、交差エントロピー関数のある地点の勾配を計算することで、より交差エントロピー関数の出力が小さい = 正解に近い出力を探索できます。\n",
+    "- ただし、ここで計算した結果をそのままフィードバックするわけではなく、後ろに記載の学習率をかけてフィードバックする。"
    ]
   },
   {
@@ -505,11 +503,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "iters_num = 10000  # 繰り返しの回数を適宜設定する\n",
+    "iters_num = 10000\n",
     "train_size = x_train.shape[0]\n",
     "batch_size = 100\n",
     "learning_rate = 0.1"
@@ -650,12 +648,11 @@
     "iter_per_epoch = int(max(train_size / batch_size, 1))\n",
     "\n",
     "for i in range(iters_num):\n",
-    "#    print(i)\n",
+    "\n",
     "    batch_mask = np.random.choice(train_size, batch_size)\n",
     "    x_batch = x_train[batch_mask]\n",
     "    t_batch = t_train[batch_mask]\n",
-    "    \n",
-    "    # 勾配の計算\n",
+    "\n",
     "    loss_W = lambda W: loss(x_batch, t_batch)\n",
     "    \n",
     "    grads = {}\n",
@@ -667,13 +664,11 @@
     "    \n",
     "    grads = gradient(x_batch, t_batch)\n",
     "    \n",
-    "    # パラメータの更新\n",
     "    for key in ('W1', 'b1', 'W2', 'b2'):\n",
     "        p.params[key] -= learning_rate * grads[key]\n",
     "\n",
     "    y = predict(x_batch)\n",
     "    loss_val = cross_entropy_error(y, t_batch)\n",
-    "    #loss_val = loss(x_batch, t_batch)\n",
     "    train_loss_list.append(loss_val)\n",
     "    \n",
     "    if i % iter_per_epoch == 0:\n",
@@ -692,7 +687,6 @@
     "        test_acc_list.append(test_acc)\n",
     "        print(\"train acc, test acc | \" + str(train_acc) + \", \" + str(test_acc))\n",
     "\n",
-    "# グラフの描画\n",
     "markers = {'train': 'o', 'test': 's'}\n",
     "x = np.arange(len(train_acc_list))\n",
     "plt.plot(x, train_acc_list, label='train acc')\n",
