Oops, last change is not affected

--- a/20190331_LinearRegression_with_BigQueryML/LinearRegression.ipynb
+++ b/20190331_LinearRegression_with_BigQueryML/LinearRegression.ipynb
@@ -457,9 +457,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STA</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>MinTemp</th>\n",
+       "      <th>MaxTemp</th>\n",
+       "      <th>predicted_MaxTemp01</th>\n",
+       "      <th>predicted_MaxTemp02</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10502</td>\n",
+       "      <td>1943-01-02</td>\n",
+       "      <td>22.222222</td>\n",
+       "      <td>30.555556</td>\n",
+       "      <td>29.996381</td>\n",
+       "      <td>30.928076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12701</td>\n",
+       "      <td>1943-01-02</td>\n",
+       "      <td>19.444444</td>\n",
+       "      <td>28.888889</td>\n",
+       "      <td>27.121711</td>\n",
+       "      <td>29.041072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>1943-01-02</td>\n",
+       "      <td>23.333333</td>\n",
+       "      <td>30.555556</td>\n",
+       "      <td>31.146249</td>\n",
+       "      <td>30.234689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31701</td>\n",
+       "      <td>1943-01-02</td>\n",
+       "      <td>16.666667</td>\n",
+       "      <td>26.111111</td>\n",
+       "      <td>24.247042</td>\n",
+       "      <td>25.343833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11701</td>\n",
+       "      <td>1943-01-02</td>\n",
+       "      <td>19.444444</td>\n",
+       "      <td>31.666667</td>\n",
+       "      <td>27.121711</td>\n",
+       "      <td>30.851307</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     STA       Date    MinTemp    MaxTemp  predicted_MaxTemp01  \\\n",
+       "0  10502 1943-01-02  22.222222  30.555556            29.996381   \n",
+       "1  12701 1943-01-02  19.444444  28.888889            27.121711   \n",
+       "2  10001 1943-01-02  23.333333  30.555556            31.146249   \n",
+       "3  31701 1943-01-02  16.666667  26.111111            24.247042   \n",
+       "4  11701 1943-01-02  19.444444  31.666667            27.121711   \n",
+       "\n",
+       "   predicted_MaxTemp02  \n",
+       "0            30.928076  \n",
+       "1            29.041072  \n",
+       "2            30.234689  \n",
+       "3            25.343833  \n",
+       "4            30.851307  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predict02_query=\"\"\"SELECT\n",
     "  actual.STA,\n",
@@ -494,13 +594,6 @@
     "data_frame = pd.read_gbq(predict02_query, 'my-labs-187013', dialect='standard')\n",
     "data_frame.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
